--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/control-solicitudes-traslado-gbftrec/control-solicitudes-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/control-solicitudes-traslado-gbftrec/control-solicitudes-traslado-gbftrec.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="addressForm">
     <mat-card class="shipping-card">
         <mat-card-content align="left">
-            <div class="row">
+            <div class="row" style="height: 45px;">
                 <div class="col-md-6">
                     <div class="row">
                         <div class="pr-1">
