--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-observaciones/tabla-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-observaciones/tabla-observaciones.component.html
@@ -1,19 +1,20 @@
 <div class="tabla-gris table-responsive">
-  <table mat-table [dataSource]="dataSource" matSort>
+  <table mat-table [dataSource]="dataSourceTest" matSort>
     <!-- fecha Column -->
     <ng-container matColumnDef="fecha">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Fecha
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fecha }}</b>
+        <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b>
       </td>
     </ng-container>
 
     <!-- observaciones Column -->
     <ng-container matColumnDef="observaciones">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Historial de observaciones</th>
-      <td mat-cell *matCellDef="let element">{{ element.observaciones }}</td>
+      <td mat-cell *matCellDef="let element"[innerHTML]><span [innerHTML]="element.observaciones"></span>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
