--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/control-solicitudes-traslado-gbftrec/control-solicitudes-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/control-solicitudes-traslado-gbftrec/control-solicitudes-traslado-gbftrec.component.html
@@ -239,7 +239,7 @@
                                     Tipo de pago 3
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
-                            2
+                           <app-form-tipo-pago-gbftrec></app-form-tipo-pago-gbftrec>
                         </mat-expansion-panel>
                     </mat-accordion>
                 </mat-expansion-panel>
