--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -111,18 +111,6 @@
                                                     [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago">
                 </app-obs-registrar-solicitud-pago>
             </mat-expansion-panel>
-            <mat-expansion-panel class="expansion-style">
-                <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title en-alerta">
-                        Validar lista de chequeo
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <div style="margin-top: 1em;">
-                    <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
-                        Este acordeón consume información de la funcionalidad Listas de chequeó.
-                    </div>
-                </div>
-            </mat-expansion-panel>
         </mat-accordion>
     </ng-container>
     <ng-template #esOtrosCostos>
@@ -140,8 +128,53 @@
                 <p><strong>Tipo de pago:</strong> {{ otrosCostosForm.get( 'tipoPago' ).value.nombre }} </p>
             </mat-card-content>
         </mat-card>
+
+        <form [formGroup]="otrosCostosObsForm">
+            <div class="row mtop justCenter">
+                <div class="col-md-5">
+                    <label class="label-left">¿Tiene observaciones a la solicitud de pago?</label>
+                </div>
+                <div class="col-md-2">
+                    <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
+                        formControlName="tieneObservaciones">
+                        <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
+                        <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
+                    </mat-radio-group>
+                    <span class="required-form-group" style="margin-left: 1px;">*</span>
+                </div>
+            </div>
+            <div class="d-flex align-items-center mtop" *ngIf="otrosCostosObsForm.get('tieneObservaciones').value === true">
+                <div class="text-area-quill izqTitle">
+                    <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a la solicitud de pago</label>
+                    <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+                        (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
+                </div>
+                <span class="contador miles" *ngIf="otrosCostosObsForm.get('observaciones').value">
+                    {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+                </span>
+                <span class="contador miles" *ngIf="otrosCostosObsForm.get('observaciones').value === null">
+                    1000
+                </span>
+            </div>
+            <button mat-button color="warn" class="btn-guardar"
+                type="button">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
+            </button>
+        </form>
     </ng-template>
     <mat-accordion>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title en-alerta">
+                    Validar lista de chequeo
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div style="margin-top: 1em;">
+                <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
+                    Este acordeón consume información de la funcionalidad Listas de chequeó.
+                </div>
+            </div>
+        </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title sin-diligenciar">
