--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -31,6 +31,27 @@
     <mat-expansion-panel class="expansion-style sub-expansion-black">
         <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title sin-diligenciar">
+                Descuento 1
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <app-form-descuentos-gog></app-form-descuentos-gog>
+    </mat-expansion-panel> 
+</mat-accordion>
+<mat-accordion>
+    <mat-expansion-panel class="expansion-style sub-expansion-black">
+        <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title sin-diligenciar">
+                Descuento 2
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <app-form-descuentos-gog></app-form-descuentos-gog>
+    </mat-expansion-panel>
+</mat-accordion>
+<!--
+<mat-accordion>
+    <mat-expansion-panel class="expansion-style sub-expansion-black">
+        <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title sin-diligenciar">
                 Costo variable
             </mat-panel-title>
         </mat-expansion-panel-header>
@@ -47,3 +68,4 @@
         <app-form-tipopago3-gog></app-form-tipopago3-gog>
     </mat-expansion-panel>
 </mat-accordion>
+-->
